# sprout

./: .dockerignore  .env.example  .env.prod.example  .gitignore  CLAUDE.md  PUBLISHING.md  README.md  deploy.sh  dev.sh  docker-compose.prod.yml  docker-compose.yml  nx.json  package-lock.json  package.json  pyproject.toml  questions.txt  render.yaml
.github/workflows/: ci.yml  deploy.yml  publish-pypi.yml
docker/: Dockerfile.nextjs  Dockerfile.nextjs.prod  Dockerfile.python  Dockerfile.python.prod  Dockerfile.render
docker/caddy/: Caddyfile
docker/render/: Caddyfile  supervisord.conf
docs/: DEPLOYMENT.md  DEPLOY_DROPLET.md  Final-Report.md  infrastructure-report.md
docs/superpowers/plans/: 2026-03-27-kiln-monorepo.md  2026-03-27-sprout-monorepo.md  2026-04-15-mcp-server-oauth.md  2026-04-16-gke-deployment.md
docs/superpowers/specs/: 2026-03-27-kiln-rebrand-restructure-design.md  2026-03-27-sprout-rebrand-restructure-design.md  2026-03-28-clerk-auth-design.md  2026-04-15-mcp-server-oauth-design.md  2026-04-15-mcp-tool-env-var-safety-design.md
infra/tanka/environments/default/: main.jsonnet  spec.json
infra/tanka/lib/: kiln.libsonnet  monitoring.libsonnet  networkpolicies.libsonnet  postgres.libsonnet  redis.libsonnet  sprout.libsonnet
infra/terraform/: backend.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
registry/tools/com.kiln.tools.arxiv_fetcher/1.0.0/: impl.py  spec.yaml
registry/tools/com.kiln.tools.crypto_price/1.0.0/: spec.yaml
registry/tools/com.kiln.tools.currency_convert/1.0.0/: currency_convert.py  spec.yaml
registry/tools/com.kiln.tools.current_date/1.0.0/: spec.yaml
registry/tools/com.kiln.tools.fetch_url/1.0.0/: fetch_url.py  spec.yaml
registry/tools/com.kiln.tools.generate_qr/1.0.0/: generate_qr.py  spec.yaml
registry/tools/com.kiln.tools.geocode_location/1.0.0/: geocode_location.py  spec.yaml
registry/tools/com.kiln.tools.github_repo_info/1.0.0/: github_repo_info.py  spec.yaml
registry/tools/com.kiln.tools.hackernews_top/1.0.0/: spec.yaml
registry/tools/com.kiln.tools.image_generate/1.0.0/: spec.yaml
registry/tools/com.kiln.tools.lyrics_fetch/1.0.0/: lyrics_fetch.py  spec.yaml
registry/tools/com.kiln.tools.satellite_image/1.0.0/: satellite_image.py  spec.yaml
registry/tools/com.kiln.tools.stock_quote/1.0.0/: spec.yaml  stock_quote.py
registry/tools/com.kiln.tools.weather_forecast/1.0.0/: spec.yaml
registry/tools/com.kiln.tools.website_screenshot/1.0.0/: spec.yaml  website_screenshot.py
registry/tools/com.kiln.tools.wikipedia_search/1.0.0/: spec.yaml  wikipedia_search.py
registry/tools/com.kiln.tools.youtube_transcript/1.0.0/: spec.yaml  youtube_transcript.py
registry/tools/com.sprout.tools.arxiv_fetcher/1.0.0/: spec.yaml
registry/tools/com.sprout.tools.crypto_price/1.0.0/: crypto_price.py  spec.yaml
registry/tools/com.sprout.tools.currency_convert/1.0.0/: currency_convert.py  spec.yaml
registry/tools/com.sprout.tools.current_date/1.0.0/: impl.py  spec.yaml
registry/tools/com.sprout.tools.fetch_url/1.0.0/: spec.yaml
registry/tools/com.sprout.tools.generate_qr/1.0.0/: spec.yaml
registry/tools/com.sprout.tools.geocode_location/1.0.0/: geocode_location.py  spec.yaml
registry/tools/com.sprout.tools.github_repo_info/1.0.0/: github_repo_info.py  spec.yaml
registry/tools/com.sprout.tools.hackernews_top/1.0.0/: hackernews_top.py  spec.yaml
registry/tools/com.sprout.tools.image_generate/1.0.0/: image_generate.py  spec.yaml
registry/tools/com.sprout.tools.lyrics_fetch/1.0.0/: spec.yaml
registry/tools/com.sprout.tools.satellite_image/1.0.0/: satellite_image.py  spec.yaml
registry/tools/com.sprout.tools.stock_quote/1.0.0/: spec.yaml  stock_quote.py
registry/tools/com.sprout.tools.weather_forecast/1.0.0/: spec.yaml  weather_forecast.py
registry/tools/com.sprout.tools.website_screenshot/1.0.0/: spec.yaml
registry/tools/com.sprout.tools.wikipedia_search/1.0.0/: spec.yaml  wikipedia_search.py
registry/tools/com.sprout.tools.youtube_transcript/1.0.0/: spec.yaml
scripts/: publish.sh
